syntax = "proto3";
option go_package = "tsuwari/grpc/discord";
package discord;
import "google/protobuf/empty.proto";

service Discord {
	rpc GetGuildChannels(GetGuildChannelsRequest) returns (GetGuildChannelsResponse);
	rpc GetGuildInfo(GetGuildInfoRequest) returns (GetGuildInfoResponse) {}
	rpc LeaveGuild(LeaveGuildRequest) returns (google.protobuf.Empty) {}
}

enum ChannelType {
	VOICE = 0;
	TEXT = 1;
}

message GetGuildChannelsRequest {
	string guild_id = 1;
}

message GuildChannel {
	string id = 1;
	string name = 2;
	ChannelType type = 3;
}

message GetGuildChannelsResponse {
	repeated GuildChannel channels = 1;
}

message GetGuildInfoRequest {
	string guild_id = 1;
}

message GetGuildInfoResponse {
	string id = 1;
	string name = 2;
	string icon = 3;
}

message LeaveGuildRequest {
	string guild_id = 1;
}
